@@ -3,6 +3,14 @@
 	* src/field_canvas.cpp:
 	* src/main_window.cpp:
 	* src/options.cpp:
+	* src/src.pro:
+	- fixed a defect of repainting region.
+	- fixed the size of recovering animation.
+	- fixed defects of default option value.
+
+	* src/field_canvas.cpp:
+	* src/main_window.cpp:
+	* src/options.cpp:
 	* src/options.h:
 	- added parameter for the size of recovering animation.
 
